# asi

./: .gitignore  ALGORITHM.md  APPLYING-FORMALIZATION-TO-YOUR-WORK.md  BRIDGE_TYPE_UNIFIED_THEORY.md  CAPABILITY_GAIN_NARRATIVES.md  CHANGELOG.md  COMPETING_WORLDS_ANALYSIS.md  CONTINUATION_SUMMARY.txt  COPY_ON_INTERACT_GUIDE.md  CURRENT_STATUS.md  DATA_SOVEREIGNTY_SYNTHESIS.md  DEEP_INTERACTION_ANALYSIS.md  DELIVERY_SUMMARY.md  DUCKLAKE_INTEGRATION_DELIVERY.md  EDGE_PHASE_PROPAGATOR_DELIVERY.md  EXECUTION_ANALYSIS_SUMMARY.txt  EXPORT_PROCEDURES_DELIVERY.md  FINAL_ECOSYSTEM_SUMMARY.md  FORMALIZATION-GUIDE-INDEX.md  GF3_CONSERVATION_FIX_PROPOSAL.md  GF3_CONSERVATION_OPERATIONAL_GUIDE.md  GF3_CONSERVATION_QUICK_REFERENCE.md  HANDOFF_bae3c3f.md  IES_DUCKDB_LOCATIONS.md  INTERACTION_TRACES_COMPREHENSIVE.md  INVARIANT_SKILLS.md  LEVEL0_RESULTS_ANALYSIS.md  LICENSE  MASTER_SESSION_INDEX.md  MESSAGE_PROCESSING_PROGRESS.txt  MESSAGE_PROCESSING_STRATEGY.md  METASKILLS_DEPLOYMENT_GUIDE.md  NARYA_IES_OBSERVATIONAL_BRIDGES_SYNTHESIS.md  NARYA_NOV2025_RESEARCH.md  OBSERVATIONAL_BRIDGE_IMPLEMENTATION.md  PHASE_5_CONSTRUCTION_COMPLETE.md  PHASE_A0_EXECUTION_PLAN.md  PHASE_A0_OPERATIONAL_VALIDATION_ROADMAP.md  PHASE_A1_FORMALIZATION_COMPLETE.md  PHASE_A_DOCUMENTATION_INDEX.md  (+46 more)
ies/crdt_egraph/: Cargo.toml
ies/crdt_egraph/src/: colors.rs  crdt.rs  egraph.rs  lib.rs  merge.rs  patterns.rs  verify.rs
ies/music-topos/: .gitignore  .lein-repl-history  .mcp.json  .quartoignore  A16Z_PARADIGM_RESEARCH_INDEX.md  ABSURD_SYNTHESIS_DUCKDB_BRIDGE.md  AGENT.md  AGENT_ORAMA_TREESITTER_MCP_INTEGRATION.md  AGENT_O_RAMA_HTTP_INTEGRATION_REPORT.html  AGENT_O_RAMA_HTTP_INTEGRATION_REPORT.md  AGENT_O_RAMA_INDEX.md  AGENT_O_RAMA_INTEGRATION_STATUS.md  AGENT_O_RAMA_INTEGRATION_SUMMARY.md  AGENT_O_RAMA_QUICKSTART.md  AGENT_O_RAMA_RESEARCH_INDEX.md  AGENT_O_RAMA_SUBPROCESS_INTEGRATION_REPORT.md  ANANAS_MUSIC_TOPOS_INTEGRATION.html  ANANAS_MUSIC_TOPOS_INTEGRATION.md  API.md  ARCHITECTURE_GUIDE.md  BARTON_SURROGATE_SYSTEM_SUMMARY.md  BEHAVIORAL_ENTROPY_RESEARCH_SYNTHESIS.md  BEHAVIOR_SPACE_TACTICAL_MODEL.md  BIDIRECTIONAL_SKILL_TRAVERSAL_IMPLEMENTATION_GUIDE.md  BLACKHATGO_UNWORLD_INTEGRATION.md  BLUESKY_SKILL_ARCHITECTURE.md  BUMPUS_DISSONANCE_DETECTOR.md  CATCOLAB_ARCHITECTURE_ANALYSIS.md  CATCOLAB_MUSIC_TOPOS_INTEGRATION.md  CATEGORIES_4_11_IMPLEMENTATION_PLAN.md  CAUSAL_CHAIN_ANALYSIS.md  CLAUDE.md  CLAUDE_INTERACTION_REAFFERENCE_ANALYSIS.md  CLOSURE_OPTIMIZATIONS_SUMMARY.md  CODEX.md  COGNITIVE_SUPERPOSITION_SKILL_PLAN.md  COHOMOLOGICAL_SYNTHESIS.md  COLORABLE_SEXPS_SKILL.html  COLORABLE_SEXPS_SKILL.md  COLORABLE_WORLD_COMPLETE.md  (+402 more)
ies/music-topos/.agents/: AGENTS.md
ies/music-topos/.aider/: mcp.json
ies/music-topos/.codex/: AGENTS.md  config.json  config.toml  mcp.json
ies/music-topos/.flox/: env.json
ies/music-topos/.ruler/: AGENTS.md  TOPOS_SYSTEM_MESSAGE.md  ai-skills-registry.toml  mcp-tasks.yaml  propagate.clj  ruler.toml
ies/music-topos/.topos/: CAUSAL_LOOP_DOCUMENTATION.md  MARGINALIA_INITIAL_TERMINAL_OBJECTS.md  audio_proof.rb  causal_loop_verifier.rb  coin_flip_mcp_results.md  disk_inventory.txt  genesis_chain.edn  immortal_vs_mortal_analysis.md  interactive_repl.rb  leitmotif_evolution.rb  leitmotif_stream.rb  ontological_verification.rb  osc_audio_demo.rb  osc_stress_test.rb  parallel_osc.rb  sonic_pi_initial_object_world.rb  sonic_pi_master_demo.rb  sonic_pi_rubato_bridge.rb  sonic_pi_terminal_object_world.rb  subagent_ergodic_genetic.md  subagent_minus_report.md  subagent_minus_xor.md  subagent_plus_chromatic.md  synthesize_leitmotifs.rb  verify_initial_world_audio.rb  verify_terminal_world_audio.rb  wav_proof.rb  world.rb
ies/music-topos/_site/: A16Z_PARADIGM_RESEARCH_INDEX.html  AGENT.html  AGENT_O_RAMA_INDEX.html  AGENT_O_RAMA_INTEGRATION_STATUS.html  AGENT_O_RAMA_INTEGRATION_SUMMARY.html  AGENT_O_RAMA_QUICKSTART.html  AGENT_O_RAMA_RESEARCH_INDEX.html  AGENT_O_RAMA_SUBPROCESS_INTEGRATION_REPORT.html  ARCHITECTURE_GUIDE.html  BARTON_SURROGATE_SYSTEM_SUMMARY.html  BLUESKY_SKILL_ARCHITECTURE.html  CATCOLAB_ARCHITECTURE_ANALYSIS.html  CATCOLAB_MUSIC_TOPOS_INTEGRATION.html  CATEGORIES_4_11_IMPLEMENTATION_PLAN.html  CAUSAL_CHAIN_ANALYSIS.html  COLORABLE_WORLD_COMPLETE.html  COMPLETE_ECOSYSTEM_INDEX.html  COMPLETE_KNOWLEDGE_SYSTEM_SUMMARY.html  COMPLETE_PROJECT_JOURNEY.html  CRDT_OPEN_GAMES_COLOR_HARMONIZATION.html  DEPLOYMENT_GAME_THEORY_WORLD.html  DEPLOYMENT_GUIDE.html  DEPLOYMENT_INDEX.html  DEPLOYMENT_MANIFEST.html  DEPLOYMENT_READINESS.html  DEPLOYMENT_READY_INDEX.html  DISCOPY_SICP_BRIDGE_COMPLETE.html  DUCKDB_GRAPHQL_DEPLOYMENT.html  ENTROPY_METRICS_QUICK_REFERENCE.html  FINAL_AGENT_RESEARCH_STATUS.html  FINAL_DELIVERABLES_SUMMARY.html  FLOX_SETUP.html  FORMAL_PROOFS_INDEX.html  GAY_RS_APPLE_SILICON_ROADMAP.html  GAY_RS_DISTRIBUTION_READY.html  GAY_RS_DISTRIBUTION_STRATEGY.html  GAY_RUST_APPLE_SILICON_DESIGN.html  GENESIS_QUERY_PATTERN.html  GEOMETRIC_MORPHISM_INSTRUMENTAL_SURVEY.html  GIRARD_42D_MINING.html  (+74 more)
ies/music-topos/agents/: automatic_remediation.jl  comprehension_discovery.jl  index.qmd  navigation_caching.jl  production_config.jl  production_dashboard.jl  prover_orchestrator.jl  test_comprehension_discovery.jl  test_phase2_integration.jl  test_phase4_production.jl
ies/music-topos/api/: music_topos_server.rb
ies/music-topos/architecture/: index.qmd
ies/music-topos/crdt/: index.qmd
ies/music-topos/data/: signal_arxiv_papers.txt  signal_github_repos.txt
ies/music-topos/db/: acset_history_view.sql  apt_observations_schema.sql  compositions_schema.sql  interaction_entropy_schema.sql  neighbor_aware_acset.sql  thread_operad_schema.sql
ies/music-topos/deploy/: spin.toml
ies/music-topos/deployment/: checklist.qmd  game-theory.html  game-theory.qmd  (+3 more)
(+1598 files in other folders)
