[package]
name = "crdt_egraph"
version = "0.2.0"
edition = "2021"
description = "CRDT E-Graph with Commutative Merge - Rust implementation with 3-coloring by construction"
license = "MIT"

[dependencies]
egg = "0.11"
hashbrown = "0.14"
ahash = "0.8"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
chrono = "0.4"
uuid = { version = "1.0", features = ["v4", "serde"] }
fnv = "1.0"

[dev-dependencies]
proptest = "1.3"
criterion = "0.5"

[lib]
name = "crdt_egraph"
path = "src/lib.rs"

[[bin]]
name = "crdt_egraph_cli"
path = "src/bin/cli.rs"
