[project]
name = "music-topos"
version = "0.1.0"
description = "Music Topos: Category-theoretic music synthesis with GF(3) color conservation"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "bmorphism", email = "barton@chess.com" }
]
keywords = [
    "category-theory",
    "music",
    "topos",
    "operads",
    "color",
    "gf3",
    "discopy",
    "mcp"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Multimedia :: Sound/Audio",
]

dependencies = [
    "hy>=1.0.0",
    "discopy>=1.1.0",
    "duckdb>=1.0.0",
    "numpy>=1.26.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.8.0",
]
mcp = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]
viz = [
    "matplotlib>=3.8.0",
    "networkx>=3.2.0",
]

[project.scripts]
discohy-operad = "discohy_thread_operad:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function calls in default arguments
    "B905",   # zip without explicit strict
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["music_topos", "discohy_thread_operad"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

# ═══════════════════════════════════════════════════════════════════════════════
# UV Configuration
# ═══════════════════════════════════════════════════════════════════════════════

[tool.uv]
dev-dependencies = [
    "ruff>=0.8.0",
    "pytest>=8.0.0",
]

[tool.uv.pip]
index-url = "https://pypi.org/simple"
