[package]
name = "egraph-service"
version = "1.0.0"
edition = "2021"
publish = false

[dependencies]
spin-sdk = "3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["sync", "macros", "io-util", "rt", "time"] }
anyhow = "1.0"
http = "1.0"
uuid = { version = "1.0", features = ["v4"] }
# egg = "0.9"  # E-graph library - uncomment when ready

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
