[package]
name = "interaction-timeline"
version = "1.0.0"
edition = "2021"
publish = false

[dependencies]
spin-sdk = "3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["sync", "macros", "io-util", "rt", "time"] }
anyhow = "1.0"
http = "1.0"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "z"
strip = true
codegen-units = 1
